--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,15 @@ body {
     margin: 0;
 }
 
+.App {
+    padding: 0;
+    margin: 0;
+}
+
 p {
     font-family: 'Montserrat', sans-serif;
 }
 
-.center {
+.container-center {
     text-align: center;
 }
