--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -7,7 +7,7 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 1.125em;
     line-height: 22px;
     letter-spacing: 0.1em;
     color: #1A535C;
@@ -18,7 +18,7 @@
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
-    font-size: 64px;
+    font-size: 4em;
     line-height: 78px;
     color: #10373F;
 }
@@ -27,6 +27,6 @@
     display: inline-block;
     background: linear-gradient(180deg,hsla(0,0%,100%,0) 88%,#FFE66D 0);
     background-position-y: -15px;
-    background-position-x: -10px;
-    width: 357px;
+    background-position-x: -20px;
+    width: 110%;
 }
